Sat Apr 25 15:39:44 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_succ): refactored to avoid gmt variable.
	  (strftimev): use TIME_UTC_P.
	  (time_strftime): ditto.

Sat Apr 25 15:21:33 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (TIME_UTC_P): new macro..
	  (TIME_SET_UTC): ditto.
	  (TIME_LOCALTIME_P): ditto.
	  (TIME_SET_LOCALTIME): ditto.
	  (time_utc_p): use the above macro.
	  (time_localtime): ditto.
	  (time_localtime): ditto.
	  (time_gmtime): ditto.
	  (time_to_s): ditto.
	  (time_add): ditto.
	  (time_sec): ditto.
	  (time_min): ditto.
	  (time_hour): ditto.
	  (time_mday): ditto.
	  (time_mon): ditto.
	  (time_year): ditto.
	  (time_wday): ditto.
	  (wday_p): ditto.
	  (time_yday): ditto.
	  (time_isdst): ditto.
	  (time_zone): ditto.
	  (time_utc_offset): ditto.
	  (time_to_a): ditto.
	  (strftimev): ditto.
	  (time_strftime): ditto.
	  (time_mdump): ditto.

Thu Apr 23 01:30:37 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/zlib/zlib.c (Zlib::GzipFile#path): New method.

Wed Apr 22 20:25:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_timespec): check out-of-range.  [ruby-core:23282]
	  [Bug #1396]

Wed Apr 22 19:33:13 2009  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.parse): use year completion in Date._parse.

Wed Apr 22 11:12:15 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (GMTIME, LOCALTIME): should set result if not have *_r().

	* time.c (localtime_with_gmtoff): now always needed tmbuf.

Wed Apr 22 10:38:47 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* dir.c (glob_helper): C99(gcc)-ism.

	* time.c (find_time_t): GUESS macro needs the variable named ``result''
	  always.

Wed Apr 22 09:27:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (localtime_with_gmtoff): fixed cross function jump.

Wed Apr 22 03:06:56 2009  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time#rfc2822): pad leading zeros for year.
	  (Time#httpdate): ditto.
	  (Time#xmlschema): ditto.
